Update html file

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     <script
      type="text/javascript">
       (function(){
-          emailjs.init(process.env.REACT_APP_YOUR_PUBLIC_KEY);
+          emailjs.init(window.REACT_APP_YOUR_PUBLIC_KEY);
       })();
     </script>
   </body>
