--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       <title>Md Rayhan Ahmed | Portfolio</title>
       <meta
         name="description"
-        content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
+        content="Hire Professional Freelancer &amp; React Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
       />
       <meta name="robots" content="noodp" />
       <meta property="og:locale" content="en_US" />
@@ -21,7 +21,7 @@
       />
       <meta
         property="og:description"
-        content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
+        content="Hire Professional Freelancer &amp; React Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
       />
       <meta
         property="og:site_name"
@@ -30,7 +30,7 @@
       <meta name="twitter:card" content="summary" />
       <meta
         name="twitter:description"
-        content="Hire Professional Freelancer &amp; Angular Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
+        content="Hire Professional Freelancer &amp; React Developer. Building animations and interactive experiences, hi-end solutions, website maintenance &amp; security"
       />
       <meta
         name="twitter:title"
